src/objects/Zonda_Contract__c.object
<CustomObject>
    <description>MG_Zonda Contract</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Zonda Contracts</relationshipLabel>
        <relationshipName>Zonda_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Creation_Date__c</fullName>
        <defaultValue>Now()</defaultValue>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>A</fullName>
                    <isActive>false</isActive>
                    <label>A</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>County_Names__c</fullName>
        <label>County Names</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Coverage_Region_Eq__c</fullName>
        <formula>&quot;&quot;</formula>
        <label>Coverage Region Old</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coverage_Region_String__c</fullName>
        <label>Coverage Region String</label>
        <length>40000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Coverage_Region__c</fullName>
        <label>Coverage Region String old</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Coverage_Region_long__c</fullName>
        <label>Coverage Region</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Coverage_String__c</fullName>
        <label>Coverage String</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Meyers_Id__c</fullName>
        <description>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</description>
        <externalId>true</externalId>
        <inlineHelpText>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</inlineHelpText>
        <label>Meyers Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>RSD_Acct_Owner__c</fullName>
        <formula>IF ( ISBLANK( Account__r.Strategic_Account_RD_Override__c ),  Account__r.Metrostudy_Sales_Region_Assignment_RD__r.User__r.FirstName + &apos; &apos; + Account__r.Metrostudy_Sales_Region_Assignment_RD__r.User__r.LastName , Account__r.Strategic_Account_RD_Override__r.FirstName + &apos; &apos; + Account__r.Strategic_Account_RD_Override__r.LastName)</formula>
        <label>RSD</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSD_Email__c</fullName>
        <description>RSD__r.Email</description>
        <formula>IF ( ISBLANK( Account__r.Strategic_Account_RD_Override__c ), Account__r.Metrostudy_Sales_Region_Assignment_RD__r.User__r.Email , Account__r.Strategic_Account_RD_Override__r.Email)</formula>
        <label>RSD Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSD__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RSD</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Zonda_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role_s__c</fullName>
        <label>Role(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Land Acquisition</fullName>
                </value>
                <value>
                    <fullName>Sales &amp; Marketing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subscription_End_Date__c</fullName>
        <defaultValue>DATE(2999,12,31)</defaultValue>
        <label>Subscription End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zonda_Pro__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Contract has Zonda Analytics access</inlineHelpText>
        <label>Zonda Pro</label>
        <type>Checkbox</type>
    </fields>
    <label>Zonda Contract</label>
    <listViews>
        <fullName>My_Zonda_Contracts</fullName>
        <columns>NAME</columns>
        <columns>Contract_Status__c</columns>
        <columns>Account__c</columns>
        <columns>Coverage_Region_Eq__c</columns>
        <columns>Role_s__c</columns>
        <columns>Zonda_Pro__c</columns>
        <columns>RSD__c</columns>
        <columns>Contract_Creation_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Zonda Contract</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zonda Contracts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Land_Access_Required_for_Pro</fullName>
        <active>true</active>
        <description>Land Acquisition Access Required for Pro</description>
        <errorConditionFormula>AND(NOT(INCLUDES(Role_s__c ,&quot;Land Acquisition&quot;)), Zonda_Pro__c==TRUE)</errorConditionFormula>
        <errorDisplayField>Zonda_Pro__c</errorDisplayField>
        <errorMessage>Land Acquisition access is required for Pro</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ZondaContract_Name_Less_Than_50</fullName>
        <active>true</active>
        <errorConditionFormula>LEN(Name) &gt; 50</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Zonda Contract Name should not exceed 50 characters</errorMessage>
    </validationRules>
</CustomObject>